added some unit tests