@@ -24,6 +24,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						@{argLine} --add-opens java.base/java.lang=fr.cril.rubens.core
+					</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
